@@ -1107,7 +1107,7 @@ public class SipStackImpl extends SIPTransactionStack implements
 				.getProperty("gov.nist.javax.sip.MAX_CONNECTIONS");
 		if (maxConnections != null) {
 			try {
-				this.maxConnections = new Integer(maxConnections).intValue();
+				this.maxConnections = Integer.valueOf(maxConnections).intValue();
 			} catch (NumberFormatException ex) {
 				if (logger.isLoggingEnabled())
 					logger.logError(
@@ -1119,7 +1119,7 @@ public class SipStackImpl extends SIPTransactionStack implements
 				.getProperty("gov.nist.javax.sip.THREAD_POOL_SIZE");
 		if (threadPoolSize != null) {
 			try {
-				this.threadPoolSize = new Integer(threadPoolSize).intValue();
+				this.threadPoolSize = Integer.valueOf(threadPoolSize).intValue();
 			} catch (NumberFormatException ex) {
 				if (logger.isLoggingEnabled())
 					logger.logError(
@@ -1137,7 +1137,7 @@ public class SipStackImpl extends SIPTransactionStack implements
 		.getProperty("gov.nist.javax.sip.TCP_POST_PARSING_THREAD_POOL_SIZE");
 		if (tcpTreadPoolSize != null) {
 			try {
-				int threads = new Integer(tcpTreadPoolSize).intValue();
+				int threads = Integer.valueOf(tcpTreadPoolSize).intValue();
 				super.setTcpPostParsingThreadPoolSize(threads);
 				PostParseExecutorServices.setPostParseExcutorSize(this, threads, congetstionControlTimeout);
 			} catch (NumberFormatException ex) {
@@ -1151,7 +1151,7 @@ public class SipStackImpl extends SIPTransactionStack implements
 				.getProperty("gov.nist.javax.sip.MAX_SERVER_TRANSACTIONS");
 		if (serverTransactionTableSize != null) {
 			try {
-				this.serverTransactionTableHighwaterMark = new Integer(
+				this.serverTransactionTableHighwaterMark = Integer.valueOf(
 						serverTransactionTableSize).intValue();
 				this.serverTransactionTableLowaterMark = this.serverTransactionTableHighwaterMark * 80 / 100;
 				// Lowater is 80% of highwater
@@ -1172,7 +1172,7 @@ public class SipStackImpl extends SIPTransactionStack implements
 				.getProperty("gov.nist.javax.sip.MAX_CLIENT_TRANSACTIONS");
 		if (clientTransactionTableSize != null) {
 			try {
-				this.clientTransactionTableHiwaterMark = new Integer(
+				this.clientTransactionTableHiwaterMark = Integer.valueOf(
 						clientTransactionTableSize).intValue();
 				this.clientTransactionTableLowaterMark = this.clientTransactionTableLowaterMark * 80 / 100;
 				// Lowater is 80% of highwater
@@ -1852,7 +1852,6 @@ public class SipStackImpl extends SIPTransactionStack implements
 			this.eventScanner.forceStop();
 		this.eventScanner = null;
 		PostParseExecutorServices.shutdownThreadpool();
-
 	}
 
 	/*
