@@ -282,7 +282,7 @@ public class Shootist implements SipListener {
             int fromTag = 1000 + cmdSeq;
 
             fromHeader = headerFactory.createFromHeader(fromNameAddress,
-                    new Integer(fromTag).toString());
+                    Integer.valueOf(fromTag).toString());
             String sdpData = "v=0\r\n"
                     + "o=4855 13760799956958020 13760799956958020"
                     + " IN IP4  129.6.55.78\r\n" + "s=mysession session\r\n"
