@@ -95,7 +95,7 @@ public class Proxy extends TestHarness implements SipListener {
                             .createRecordRouteHeader(address);
                     newRequest.addHeader(recordRoute);
                     ct1.setApplicationData(st);
-                    this.clientTxTable.put(new Integer(targetPorts[0]), ct1);
+                    this.clientTxTable.put(Integer.valueOf(targetPorts[0]), ct1);
 
                     newRequest = (Request) request.clone();
                     ((SipURI)newRequest.getRequestURI()).removePort();
@@ -119,7 +119,7 @@ public class Proxy extends TestHarness implements SipListener {
                     newRequest.addHeader(recordRoute);
                     ClientTransaction ct2 = sipProvider.getNewClientTransaction(newRequest);
                     ct2.setApplicationData(st);
-                    this.clientTxTable.put(new Integer(targetPorts[1]), ct2);
+                    this.clientTxTable.put(Integer.valueOf(targetPorts[1]), ct2);
 
                     // Send the requests out to the two listening points of the
                     // client.
