@@ -477,7 +477,7 @@ public class AckReTransmissionTest extends ScenarioHarness implements SipListene
                         .createAddress(fromAddress);
                 fromNameAddress.setDisplayName(fromDisplayName);
                 FromHeader fromHeader = protocolObjects.headerFactory
-                        .createFromHeader(fromNameAddress, new Integer((int) (Math
+                        .createFromHeader(fromNameAddress, Integer.valueOf((int) (Math
                                 .random() * Integer.MAX_VALUE)).toString());
 
                 // create To Header
