@@ -146,7 +146,7 @@ public class DialogEarlyStateTimeoutTest extends TestCase {
                         .createAddress(fromAddress);
                 fromNameAddress.setDisplayName(fromDisplayName);
                 FromHeader fromHeader = headerFactory.createFromHeader(
-                        fromNameAddress, new Integer(
+                        fromNameAddress, Integer.valueOf(
                                 (int) (Math.random() * Integer.MAX_VALUE))
                                 .toString());
 
@@ -422,6 +422,7 @@ public class DialogEarlyStateTimeoutTest extends TestCase {
         SipFactory sipFactory = null;
 
         sipFactory = SipFactory.getInstance();
+        sipFactory.resetFactory();
         sipFactory.setPathName("gov.nist");
         Properties properties;
 
