@@ -150,7 +150,7 @@ public class Shootme implements SipListener {
             ContactHeader contactHeader = headerFactory.createContactHeader(address);
             response.addHeader(contactHeader);
 
-            String toTag = new Integer(new Random().nextInt()).toString();
+            String toTag = Integer.valueOf(new Random().nextInt()).toString();
 
             Dialog dialog = st.getDialog();
             inviteDialog = dialog;
